# cesco.it

./: .gitignore  README.md  hugo.toml  netlify.toml  pyproject.toml
.github/workflows/: build-and-deploy.yml  hugo.yml
assets/icons/: site.webmanifest
config/_default/: config.toml  languages.it.toml  menus.it.toml  params.toml
content/: _config.yaml  _index.md
content/answers/: _config.yaml
content/blog/: _index.md
content/blog/addio-xyzolog/: index.md
content/blog/evercade-vs/: index.md
content/blog/gran-premio-f1-bootleg-arcade/: index.md
content/blog/neogeo-8bitdo-amazon-fire-stick/: index.md
content/blog/no-tomorrow/: index.md
content/blog/numismatica-per-retrogamers/: index.md
content/blog/paku-paku-pb100/: index.md
content/blog/post-1/: _index.md
content/blog/post-2/: _index.md
content/blog/prova/: index.md
content/blog/ugbasic-compilatore/: index.md
content/chi-sono/: index.md
content/en/blog/: _index.md
content/examples/: _config.yaml
content/pages/: chi-sono.md
content/plans/: _config.yaml
content/play/: _index.md
content/privacy/: _config.yaml  index.md
content/projects/: _config.yaml
content/services/: _config.yaml
content/termini-condizioni/: index.md
content/tutorial/: _index.md
i18n/: it.json
layouts/_default/: pico8.html
layouts/partials/: extend-footer.html
src/main/: app.py
src/sitekit/lib/: i18n.py
src/tools/: build.py  misc.py  serve.py
static/: robots.txt
static/.well-known/: webfinger
static/icons/: site.webmanifest
templates/: 404.html  index.html  privacy.html
templates/_default/: baseof.html
templates/partials/: head.html  header.html
templates/widgets/: picture.html
themes/hugo-blog-awesome/: theme.toml
(+76 files in other folders)
