[tool.poetry]
name = "cesco-it"
version = "0.1.0"
description = ""
authors = ["Francesco Maida <francesco.maida@gmail.com>"]
packages = [
  { include = "main",  from = "src" },
  { include = "tools", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
flask = ">=3.1.2,<4.0.0"
frozen-flask = ">=1.0.2,<2.0.0"
python-frontmatter = ">=1.1,<2.0"
markdown = ">=3.8.2,<4.0.0"
pillow = ">=11.3.0,<12.0.0"
flask-minify = ">=0.50,<0.51"
sitekit = { git = "https://github.com/fmaida/sitekit.git", branch = "main" }

[tool.poetry.scripts]
serve = "tools.serve:main"
build = "tools.build:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"